--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-hook-form": "^7.39.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11",
     "yup-password": "^0.2.2"
